--- a/css/estilo3.css
+++ b/css/estilo3.css
@@ -71,7 +71,7 @@ body, html {
     width: 100%;
 }
 
-/* Botón modificado a negro */
+
 .boton-iniciar-sesion {
     background-color: #000;
     color: white;
@@ -82,7 +82,7 @@ body, html {
     font-weight: 700;
     cursor: pointer;
     transition: background-color 0.2s;
-    width: auto; /* Ancho según contenido */
+    width: auto; 
     min-width: 200px;
 }
 
@@ -90,7 +90,7 @@ body, html {
     background-color: #333;
 }
 
-/* Responsive */
+
 @media (max-width: 768px) {
     .contenedor-principal {
         flex-direction: column;
